prevent from committing stuff from other branches

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@
 /runtest.py
 # Stuff from other branches
 /README.md
+/SConsArguments
+/SConstruct
+/bin
+/doc
+/requirements.txt
+/test
+/unit_tests
