--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - python bin/downloads.py
   - pip install --upgrade pip
   - pip install -r requirements.txt
+  - pip install scons
 before_script:
   - scons --version
 script:
