--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,14 @@ install:
   - python bin/downloads.py
   - pip install --upgrade pip
   - pip install -r requirements.txt
+  - pip install coveralls
   - pip install scons
 before_script:
   - scons --version
 script:
   - scons user-doc
   - scons api-doc || true # until python-epydoc is not in whitelist
-  - scons unit-test
-  - SCONS_EXTERNAL_TEST=1 python runtest.py -a
+  - scons test
+  - scons --with-coverage unit-test && coverage report
+after_success:
+  - coveralls
